[tool.poetry]
name = "ledger-language-server"
version = "0.1.0"
description = "A language server for Ledger"
authors = ["Sam Pringle <pringle@hey.com>"]
readme = "README.md"
packages = [{include = "ledger_language_server"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
mypy = "^1.4.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
